--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,1 +1,7 @@
-
+environment:
+  - JAVA_HOME: C:\Program Files\Java\jdk1.8.0
+build_script:
+  - mkdir out
+  - javac -d out src/raytracing/*.java
+  - cd out
+  - java raytracing.JRaytracing
